resume now is on the left, fixed preview margin collapse, preview badges offset

--- a/src/app/shared/preview/components/preview-comment/preview-comment.component.scss
+++ b/src/app/shared/preview/components/preview-comment/preview-comment.component.scss
@@ -3,7 +3,6 @@
   padding: 0 var(--spacing-m);
   padding-top: var(--spacing-s);
 	border-top: 1px solid var(--color-divider);
-	margin-top: auto;
 }
 
 h2 {
