--- a/src/app/shared/preview/components/preview-section/preview-section.component.scss
+++ b/src/app/shared/preview/components/preview-section/preview-section.component.scss
@@ -3,7 +3,7 @@
 	padding: 0;
 	margin: var(--spacing-l);
 
-	.deep-class:not(:empty) {
+	.deep-class:not(:empty):not(.no-padding) {
 		padding-top: var(--spacing-ms);
 	}
 }
